--- a/scrapping.ipynb
+++ b/scrapping.ipynb
@@ -41,7 +41,7 @@
     "            lang=lang,\n",
     "            country=country,\n",
     "            sort=Sort.NEWEST,  # Correctly use Sort enum for sorting\n",
-    "            count=min(100, num_reviews - count)\n",
+    "            count=min(1000, num_reviews - count)\n",
     "        )\n",
     "        all_reviews.extend(result)\n",
     "        count += len(result)\n",
@@ -60,9 +60,7 @@
     "    def label_rating(rating):\n",
     "        if rating in [1, 2]:\n",
     "            return 'negatif'\n",
-    "        elif rating == 3:\n",
-    "            return 'netral'\n",
-    "        elif rating in [4, 5]:\n",
+    "        elif rating in [3, 4, 5]:\n",
     "            return 'positif'\n",
     "\n",
     "    df['label'] = df['rating'].apply(label_rating)\n",
@@ -82,7 +80,7 @@
     "    print(f\"Data dengan label disimpan di '{data_latih_labeled_file}'.\")\n",
     "else:\n",
     "    print(f\"File '{data_latih_file}' tidak ditemukan. Melakukan scraping.\")\n",
-    "    reviews_df = scrape_reviews_from_url(playstore_url, num_reviews=100)\n",
+    "    reviews_df = scrape_reviews_from_url(playstore_url, num_reviews=1000)\n",
     "    reviews_df = add_labels_to_reviews(reviews_df)\n",
     "    reviews_df.to_excel(data_latih_file, index=False)\n",
     "    reviews_df.to_excel(data_latih_labeled_file, index=False)\n",
