--- a/scrapping.ipynb
+++ b/scrapping.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File 'data_latih.xlsx' tidak ditemukan. Melakukan scraping.\n",
-      "Scraping reviews for App ID: com.google.android.youtube\n",
-      "Scraping selesai. Data disimpan di 'data_latih.xlsx' dan 'data_latih_labeled.xlsx'.\n",
+      "File 'web/static/data/gotube/data_latih.xlsx' tidak ditemukan. Melakukan scraping.\n",
+      "Scraping reviews for App ID: premium.gotube.adblock.utube\n",
+      "Scraping selesai. Data disimpan di 'web/static/data/gotube/data_latih.xlsx' dan 'web/static/data/gotube/data_latih_labeled.xlsx'.\n",
       "Proses selesai.\n"
      ]
     }
@@ -68,9 +68,9 @@
     "    return df\n",
     "\n",
     "# Contoh penggunaan\n",
-    "playstore_url = \"https://play.google.com/store/apps/details?id=com.google.android.youtube&hl=id\"\n",
-    "data_latih_file = \"data_latih.xlsx\"\n",
-    "data_latih_labeled_file = \"data_latih_labeled.xlsx\"\n",
+    "playstore_url = \"https://play.google.com/store/apps/details?id=premium.gotube.adblock.utube&hl=id\"\n",
+    "data_latih_file = \"web/static/data/gotube/data_uji.xlsx\"\n",
+    "data_latih_labeled_file = \"web/static/data/gotube/data_test.xlsx\"\n",
     "\n",
     "if os.path.exists(data_latih_file):\n",
     "    print(f\"File '{data_latih_file}' ditemukan. Menambahkan label pada data yang ada.\")\n",
@@ -80,7 +80,7 @@
     "    print(f\"Data dengan label disimpan di '{data_latih_labeled_file}'.\")\n",
     "else:\n",
     "    print(f\"File '{data_latih_file}' tidak ditemukan. Melakukan scraping.\")\n",
-    "    reviews_df = scrape_reviews_from_url(playstore_url, num_reviews=1000)\n",
+    "    reviews_df = scrape_reviews_from_url(playstore_url, num_reviews=200)\n",
     "    reviews_df = add_labels_to_reviews(reviews_df)\n",
     "    reviews_df.to_excel(data_latih_file, index=False)\n",
     "    reviews_df.to_excel(data_latih_labeled_file, index=False)\n",
