--- a/scrapping.ipynb
+++ b/scrapping.ipynb
@@ -63,7 +63,7 @@
     "            app_id,\n",
     "            lang=lang,\n",
     "            country=country,\n",
-    "            sort=Sort.NEWEST,\n",
+    "            sort=Sort.MOST_RELEVANT,\n",
     "            count=num_reviews - len(df),\n",
     "        )\n",
     "\n",
