--- a/scrapping.ipynb
+++ b/scrapping.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memulai scraping 2000 ulasan untuk data latih dari: https://play.google.com/store/apps/details?id=premium.gotube.adblock.utube&hl=id\n",
+      "Scraping reviews for App ID: premium.gotube.adblock.utube\n",
+      "Data latih disimpan di: web/static/data/gotube/data_latih.xlsx\n"
+     ]
+    }
+   ],
    "source": [
     "from google_play_scraper import reviews, Sort\n",
     "import pandas as pd\n",
@@ -106,7 +116,7 @@
     "# **Contoh penggunaan**\n",
     "if __name__ == \"__main__\":\n",
     "    playstore_url = \"https://play.google.com/store/apps/details?id=premium.gotube.adblock.utube&hl=id\"\n",
-    "    num_reviews = 200  # Jumlah ulasan yang diambil untuk data latih\n",
+    "    num_reviews = 2000  # Jumlah ulasan yang diambil untuk data latih\n",
     "    output_file = \"web/static/data/gotube/data_latih.xlsx\"  # File untuk menyimpan data latih\n",
     "\n",
     "    main_data_latih(playstore_url, num_reviews, output_file)\n"
@@ -114,9 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memulai scraping 50 ulasan untuk data uji dari: https://play.google.com/store/apps/details?id=premium.gotube.adblock.utube&hl=id\n",
+      "Scraping reviews for App ID: premium.gotube.adblock.utube\n",
+      "Data uji disimpan di: web/static/data/gotube/data_uji_test.xlsx\n"
+     ]
+    }
+   ],
    "source": [
     "from google_play_scraper import reviews, Sort\n",
     "import pandas as pd\n",
