--- a/scrapping.ipynb
+++ b/scrapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -115,16 +115,16 @@
     "\n",
     "# **Contoh penggunaan**\n",
     "if __name__ == \"__main__\":\n",
-    "    playstore_url = \"https://play.google.com/store/apps/details?id=premium.gotube.adblock.utube&hl=id\"\n",
+    "    playstore_url = \"https://play.google.com/store/apps/details?id=com.google.android.youtube\"\n",
     "    num_reviews = 2000  # Jumlah ulasan yang diambil untuk data latih\n",
-    "    output_file = \"web/static/data/gotube/data_latih.xlsx\"  # File untuk menyimpan data latih\n",
+    "    output_file = \"web/static/data/youtube/data_latih.xlsx\"  # File untuk menyimpan data latih\n",
     "\n",
     "    main_data_latih(playstore_url, num_reviews, output_file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
     "\n",
     "# **Contoh penggunaan**\n",
     "if __name__ == \"__main__\":\n",
-    "    playstore_url = \"https://play.google.com/store/apps/details?id=premium.gotube.adblock.utube&hl=id\"\n",
+    "    playstore_url = \"https://play.google.com/store/apps/details?id=com.google.android.youtube\"\n",
     "    num_reviews = 50  \n",
     "    offset = 200  \n",
     "    output_file = \"web/static/data/gotube/data_uji_test.xlsx\"  \n",
