--- a/scrapping.ipynb
+++ b/scrapping.ipynb
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Memulai scraping 50 ulasan untuk data uji dari: https://play.google.com/store/apps/details?id=premium.gotube.adblock.utube&hl=id\n",
-      "Scraping reviews for App ID: premium.gotube.adblock.utube\n",
-      "Data uji disimpan di: web/static/data/gotube/data_uji_test.xlsx\n"
+      "Memulai scraping 400 ulasan untuk data uji dari: https://play.google.com/store/apps/details?id=com.google.android.youtube\n",
+      "Scraping reviews for App ID: com.google.android.youtube\n",
+      "Data uji disimpan di: web/static/data/youtube/data_uji_test.xlsx\n"
      ]
     }
    ],
@@ -237,9 +237,9 @@
     "# **Contoh penggunaan**\n",
     "if __name__ == \"__main__\":\n",
     "    playstore_url = \"https://play.google.com/store/apps/details?id=com.google.android.youtube\"\n",
-    "    num_reviews = 50  \n",
-    "    offset = 200  \n",
-    "    output_file = \"web/static/data/gotube/data_uji_test.xlsx\"  \n",
+    "    num_reviews = 400  \n",
+    "    offset = 1  \n",
+    "    output_file = \"web/static/data/youtube/data_uji_test.xlsx\"  \n",
     "\n",
     "    main_data_uji(playstore_url, num_reviews, offset, output_file)\n"
    ]
